# rust-webos

./: .gitignore  .vercelignore  Cargo.toml  GUIDELINES.md  LICENSE  README.md  build.ps1  deploy.ps1  index.html
apps/desktop/: Cargo.toml
apps/desktop/src/: lib.rs  ui.rs  window.rs  wm.rs
apps/hello/src/: lib.rs
apps/math/: Cargo.toml
apps/math/src/: lib.rs
apps/terminal/: Cargo.toml
apps/terminal/src/: lib.rs  shell.rs  term.rs  ui.rs
src/: bios.rs  kernel.rs  lib.rs
src/fs/: mod.rs
src/gfx/: font.rs  mod.rs
src/hw/: bus.rs  cpu.rs  gpu.rs  mod.rs  ram.rs
src/shell/: mod.rs
src/sys/: fs.rs  mod.rs  shell.rs  wasm.rs
src/term/: mod.rs
